--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
-
     <head>
-        <meta charset="UTF-8">
-        <title>My Summer Car - Jouez dans votre voiture virtuelle</title>
-        <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.cdnfonts.com/css/signpainter" rel="stylesheet">
+        <meta charset="UTF-8" />
+        <title>My Summer Car VR</title>
+        <link rel="stylesheet" href="style.css" />
+        <link
+            href="https://fonts.cdnfonts.com/css/signpainter"
+            rel="stylesheet"
+        />
     </head>
 
     <body>
@@ -18,7 +20,7 @@
                     <a href="#" class="btn">Nous contacter</a>
                 </div>
                 <div class="logo">
-                    <img src="logo.webp" alt="My VR Car">
+                    <img src="logo.webp" alt="My VR Car" />
                 </div>
                 <div class="nav-links right">
                     <a href="#" class="btn">Connexion</a>
@@ -31,14 +33,16 @@
         <section id="trailer">
             <div class="video-overlay">
                 <div class="game-info">
-                    <img src="logo.webp" alt="Logo My VR Car">
+                    <img src="logo.webp" alt="Logo My VR Car" />
                     <h1>My Summer Car</h1>
-                    <p>Montez votre voiture et libérez votre créativité,<br>Maintenant en <b>VR</b> !
+                    <p>
+                        Montez votre voiture et libérez votre créativité,<br />Maintenant
+                        en <b>VR</b> !
                     </p>
                 </div>
             </div>
             <video autoplay loop muted>
-                <source src="trailer2.mp4" type="video/mp4">
+                <source src="trailer2.mp4" type="video/mp4" />
             </video>
         </section>
 
@@ -46,12 +50,54 @@
             <div class="video-overlay2">
                 <div class="game-info2">
                     <h1>My Summer Car c'est quoi ?</h1>
-                    <p>Découvrez My Summer Car, dans ce <u>jeu</u> de <u>simulation</u> en <u>réalité virtuelle</u> qui se déroule dans un village rural finlandais, vous jouez le rôle d'un jeune adulte chargé de <u>construire</u> et d'<u>entretenir</u> sa propre <u>voiture</u>, vous disposez de quelques <u>pièces mécaniques</u> afin de construire votre propre voiture pour explorer le monde qui s'offre à vous. Une fois votre bolide construit vous pourrez ainsi vous lancer dans l'univers finlandais des <u>années 90</u>.<br><br>Le jeu est très <u>réaliste</u>, avec une expérience de jeu <u>détaillée</u> et <u>immersive</u>. Les joueurs doivent <u></u>accomplir diverses tâches et <u>missions</u> pour gagner de l'<u>argent</u>, qu'ils peuvent ensuite utiliser pour acheter des pièces et des <u>mises à niveau</u> pour leur voiture. Le jeu propose également un <u>cycle</u> <u>jour-nuit</u>, un <u>système</u> <u>météorologique</u> et un <u>moteur physique réaliste</u>, qui contribuent tous au réalisme du jeu.<br><br>L'une des principales caractéristiques du jeu est l'aspect <u>construction</u> et <u>personnalisation</u> de la voiture. Les joueurs peuvent choisir parmi une <u>grande variété de pièces</u> <u>et de mises à niveau</u> pour construire leur voiture, des pièces de <u>moteur</u> aux <u>kits de carrosserie</u>. Le jeu propose également un <u>moteur physique détaillé</u> du véhicule, qui permet aux joueurs de découvrir les <u>effets</u> de différentes pièces et mises à niveau sur les <u>performances</u> de leur voiture.<br><br>En plus de construire et de personnaliser des voitures, les joueurs peuvent également explorer l'<u>environnement ouvert</u> du jeu. Le village du jeu regorge de divers <u>endroits</u> <u>à visiter</u>, tels que des magasins, des <u>garages</u> et d'autres entreprises. Les joueurs peuvent également <u>interagir avec les PNJ</u> du jeu, qui incluent des personnages tels que des <u>mécaniciens</u>, des <u>commerçants</u> et d'autres <u>passionnés de voitures</u>.
+                    <p>
+                        Découvrez My Summer Car, dans ce <u>jeu</u> de
+                        <u>simulation</u> en <u>réalité virtuelle</u> qui se
+                        déroule dans un village rural finlandais, vous jouez le
+                        rôle d'un jeune adulte chargé de <u>construire</u> et
+                        d'<u>entretenir</u> sa propre <u>voiture</u>, vous
+                        disposez de quelques <u>pièces mécaniques</u> afin de
+                        construire votre propre voiture pour explorer le monde
+                        qui s'offre à vous. Une fois votre bolide construit vous
+                        pourrez ainsi vous lancer dans l'univers finlandais des
+                        <u>années 90</u>.<br /><br />Le jeu est très
+                        <u>réaliste</u>, avec une expérience de jeu
+                        <u>détaillée</u> et <u>immersive</u>. Les joueurs
+                        doivent <u></u>accomplir diverses tâches et
+                        <u>missions</u> pour gagner de l'<u>argent</u>, qu'ils
+                        peuvent ensuite utiliser pour acheter des pièces et des
+                        <u>mises à niveau</u> pour leur voiture. Le jeu propose
+                        également un <u>cycle</u> <u>jour-nuit</u>, un
+                        <u>système</u> <u>météorologique</u> et un
+                        <u>moteur physique réaliste</u>, qui contribuent tous au
+                        réalisme du jeu.<br /><br />L'une des principales
+                        caractéristiques du jeu est l'aspect
+                        <u>construction</u> et <u>personnalisation</u> de la
+                        voiture. Les joueurs peuvent choisir parmi une
+                        <u>grande variété de pièces</u>
+                        <u>et de mises à niveau</u> pour construire leur
+                        voiture, des pièces de <u>moteur</u> aux
+                        <u>kits de carrosserie</u>. Le jeu propose également un
+                        <u>moteur physique détaillé</u> du véhicule, qui permet
+                        aux joueurs de découvrir les <u>effets</u> de
+                        différentes pièces et mises à niveau sur les
+                        <u>performances</u> de leur voiture.<br /><br />En plus
+                        de construire et de personnaliser des voitures, les
+                        joueurs peuvent également explorer l'<u
+                            >environnement ouvert</u
+                        >
+                        du jeu. Le village du jeu regorge de divers
+                        <u>endroits</u> <u>à visiter</u>, tels que des magasins,
+                        des <u>garages</u> et d'autres entreprises. Les joueurs
+                        peuvent également <u>interagir avec les PNJ</u> du jeu,
+                        qui incluent des personnages tels que des
+                        <u>mécaniciens</u>, des <u>commerçants</u> et d'autres
+                        <u>passionnés de voitures</u>.
                     </p>
                 </div>
             </div>
             <video autoplay loop muted>
-                <source src="trailer.mp4" type="video/mp4">
+                <source src="trailer.mp4" type="video/mp4" />
             </video>
         </section>
 
@@ -96,7 +142,9 @@
                     </div>
                     <div>
                         <a href="#" class="btn">S'abonner</a>
-                        <p style="font-size: 9px;">Sous engagement pendant 1 an</p>
+                        <p style="font-size: 9px">
+                            Sous engagement pendant 1 an
+                        </p>
                     </div>
                 </div>
             </div>
@@ -113,5 +161,4 @@
             </div>
         </footer>
     </body>
-
 </html>
